Fixed JWT token handling and CORS configuration